@@ -12,6 +12,7 @@ import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -26,7 +27,7 @@ public class add {
 
     public add(CommandSender sender, String[] args){
         Sender = sender;
-        Args = List.of(args).subList(1, args.length -1);
+        Args = args.length == 1 ? Collections.emptyList() : List.of(args).subList(1, args.length -1);
     }
 
     public void execute(){
